--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -65,8 +65,8 @@
 	<br />
 	<footer>
 		<address id="cent">
-			Contact: Mr. Shashi Raj<br />Email:<a href="mailto">thebittercode@gmail.com</a><br />PhoneNo:
-			9876543210
+			Contact: Md Modassir<br />Email:<a href="mailto">mdmodassir805141@gmail.com</a><br />PhoneNo:
+			7004848803
 		</address>
 	</footer>
 </body>
